Post date z-index and Navbar z-index fixes

--- a/src/components/header/HeaderComponent.scss
+++ b/src/components/header/HeaderComponent.scss
@@ -53,6 +53,7 @@
 
 .navbar-container {
     background-color: white;
+    z-index: 2;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
 }
