--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -49,6 +49,7 @@
         margin-left: 1rem;
         margin-right: 1rem;
         position: relative;
+        z-index: 1;
 
         &::after {
             @extend %date-dotes;
